2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Remove unnecessary DPSgsave/DPSgrestore I added
	earlier in -nativeDrawInRect:... and replace them with saving/restoring
	the transformation matrix. The DPSgsave/DPSgrestore were causing problems
	when drawing images with a non-rectangular clipping area.

2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Tidy the -composite*/-dissolve* methods

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-scrollRangeToVisible:): Work with ranges
	outside the receiver (in a situation with multiple NSTextView's
	connected to a layout manager)

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (-scrollRectToVisible:): Work when the receiver
	isn't partially visible in the clip view.

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Completely overhaul the best rep selection.
	It should now be very close to the algorithm described in the cocoa
	drawing guide, and fixes numerous bugs with the old code.

2011-06-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFileWrapper.m: Add keyed coding.

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep.m: Reduce floating-point error in the
	expression which computes image point size using DPI and pixel size
	(for TIFF images.)

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImageRep.m (-description): Implement -description to
	aid debugging.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintInfo.m: Add keyed coding.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m: Add methods -_becomeRulerClient and
	-_resignRulerClient to set self as the ruler client and to resign
	from that. These get called when self becomes first responder or
	resigns from first responder.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSPrintInfo.h,