@@ -1,5 +1,9 @@
 2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>
 
+	* Source/NSImage.m (-guiDrawInRect:...): Handle dstRect with a zero size
+
+2011-06-14  Eric Wasylishen  <ewasylishen@gmail.com>
+
 	* Source/NSImage.m: Remove unnecessary DPSgsave/DPSgrestore I added
 	earlier in -nativeDrawInRect:... and replace them with saving/restoring
 	the transformation matrix. The DPSgsave/DPSgrestore were causing problems
